BNF-1215 Fix label icon alignment

--- a/gatsby/src/pages/drugs/{BnfDrug.slug}/medicinal-forms.module.scss
+++ b/gatsby/src/pages/drugs/{BnfDrug.slug}/medicinal-forms.module.scss
@@ -33,6 +33,7 @@
   display: flex;
   flex-direction: row-reverse;
   justify-content: space-between;
+  max-width: none;
 
   @include core.mq($from: md) {
     flex-direction: row;
